--- a/index.html
+++ b/index.html
@@ -34,8 +34,17 @@
         
         <div class="main-nav">
         <ul class="mail-phone list">
-            <li class="item"><a class="link" href="">info@devstudio.com</a>  </li>
-            <li class="item"><a class="link" href="tel+380961111111">+380961111111</a> </li>
+            <li class="item"><a class="link" href="">
+                <svg class="icon-mail" width="16" height="12" > 
+                    <use href="./imges/symbol-defs.svg#envelope-1"></use> 
+                </svg>              
+                info@devstudio.com
+            </a>  </li>
+            <li class="item"><a class="link" href="tel+380961111111">
+                <svg class="icon-mail" width="16" height="12" > 
+                    <use href="./imges/symbol-defs.svg#smartphone-1"></use> 
+                </svg>              
+                +380961111111</a> </li>
         </ul>
         
           </div>
