--- a/index.html
+++ b/index.html
@@ -229,6 +229,23 @@
                 </ul>
             </div>
             </section>
+            <!-- Постійні клієнти -->
+            <section class="section-clients">
+                <div class="conteiner">
+                <h2 class="section-title">Постійні клієнти</h2>
+                <ul class="clients list" >
+                    <li class="client-item"><a class="client-link" href="">
+                        <svg class="icon-client" width="41" height="46.5" > 
+                            <use href="./imges/symbol-defs.svg#group-01"></use> 
+                        </svg>    
+                    </a></li>
+                    <li class="client-item"><a class="client-link"href=""></a></li>
+                    <li class="client-item"><a class="client-link" href=""></a></li>
+                    <li class="client-item"><a class="client-link" href=""></a></li>
+                    <li class="client-item"><a class="client-link" href=""></a></li>
+                    <li class="client-item"><a class="client-link" href=""></a></li>
+                </div>
+            </section>
 
              </main>
              <!--футер-->
