--- a/index.html
+++ b/index.html
@@ -239,11 +239,31 @@
                             <use href="./imges/symbol-defs.svg#group-01"></use> 
                         </svg>    
                     </a></li>
-                    <li class="client-item"><a class="client-link"href=""></a></li>
-                    <li class="client-item"><a class="client-link" href=""></a></li>
-                    <li class="client-item"><a class="client-link" href=""></a></li>
-                    <li class="client-item"><a class="client-link" href=""></a></li>
-                    <li class="client-item"><a class="client-link" href=""></a></li>
+                    <li class="client-item"><a class="client-link"href="">
+                        <svg class="icon-client" width="106" height="60" > 
+                            <use href="./imges/symbol-defs.svg#group-1-1"></use> 
+                        </svg>    
+                    </a></li>
+                    <li class="client-item"><a class="client-link" href="">
+                        <svg class="icon-client" width="106" height="60" > 
+                            <use href="./imges/symbol-defs.svg#group-2-1"></use> 
+                        </svg>    
+                    </a></li>
+                    <li class="client-item"><a class="client-link" href="">
+                        <svg class="icon-client" width="106" height="60" > 
+                            <use href="./imges/symbol-defs.svg#group-3-1"></use> 
+                        </svg>    
+                    </a></li>
+                    <li class="client-item"><a class="client-link" href="">
+                        <svg class="icon-client" width="106" height="60" > 
+                            <use href="./imges/symbol-defs.svg#group-4-1"></use> 
+                        </svg>    
+                    </a></li>
+                    <li class="client-item"><a class="client-link" href="">
+                        <svg class="icon-client" width="106" height="60" > 
+                            <use href="./imges/symbol-defs.svg#group-5-1"></use> 
+                        </svg>    
+                    </a></li>
                 </div>
             </section>
 
